# vae-diffusion-toy-crystals

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/score_based_diffusion/: metrics.jsonl
scripts/: build_dataset.py  preview_data.py  sample_sde_score_model.py  train_diffusion_prior.py  train_sde_score_model.py  train_vae.py
src/toycrystals/: __init__.py  data.py  disk_data.py
src/toycrystals/models/: __init__.py  diffusion_prior.py  sde_score_model.py  vae.py
